fixed commandBoxes being not aligned

--- a/src/style/css/index.css
+++ b/src/style/css/index.css
@@ -164,8 +164,8 @@ ul {
 }
 
 #MainPage .page-wrapper .boxHolder {
+  float: right;
   height: 100%;
-  padding: 5em;
   width: calc(100% - 10em);
 }
 #MainPage .page-wrapper .commandBox {
