--- a/src/style/scss/modules/_main.scss
+++ b/src/style/scss/modules/_main.scss
@@ -1,7 +1,7 @@
 #MainPage .page-wrapper {
   .boxHolder {
+    float: right;
     height: 100%;
-    padding: 5em;
     width: calc(100% - 10em);
   }
 
